--- a/Unit3/django_ucd_project/blog/templates/blog/base.html
+++ b/Unit3/django_ucd_project/blog/templates/blog/base.html
@@ -45,7 +45,7 @@
         <div class="col-md-4">
           <div class="content-section">
             <h3>Our Sidebar</h3>
-            <p class="text-muted">Place any info we want in her</p>
+            <p class="text-muted">Place any info we want in here</p>
             <ul>
               <li class="list-group-item list-group-item-light">Latest Posts</li>
               <li class="list-group-item list-group-item-light">Announcements</li>
