--- a/Unit_life/life_project/blog/templates/blog/about.html
+++ b/Unit_life/life_project/blog/templates/blog/about.html
@@ -1,5 +1,5 @@
 
-    {% extends "base.html" %}
+    {% extends "blog/base.html" %}
     {% block content %}
         <h1>Blog About!</h1>
     {% endblock content %}
