--- a/Unit_life/life_project/blog/templates/blog/home.html
+++ b/Unit_life/life_project/blog/templates/blog/home.html
@@ -1,5 +1,5 @@
 
-    {% extends "base.html" %}
+    {% extends "blog/base.html" %}
 
     {% block content %}
     {% for post in posts %}
@@ -10,7 +10,7 @@
                 <a class="mr-2" href="#">{{ post.author }}</a>
                 <small class="text-muted">{{ post.date_posted|date:'dS, F, Y'}}</small>
               </div>
-              <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+              <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
               <p class="article-content">{{ post.content }}</p>
             </div>
           </article>
