--- a/Unit_life/life_project/blog/templates/blog/post_form.html
+++ b/Unit_life/life_project/blog/templates/blog/post_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% block content %}
     {% load crispy_forms_tags %} <!-- Updated here to load crispy forms --> 
     <div class=""content-section>
