--- a/Unit_life/life_project/users/templates/users/login.html
+++ b/Unit_life/life_project/users/templates/users/login.html
@@ -1,5 +1,5 @@
 
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% load crispy_forms_tags %} <!-- Load crispy forms -->
 {% block content %}
     <div class="content-section">
