--- a/Unit_life/life_project/users/templates/users/profile.html
+++ b/Unit_life/life_project/users/templates/users/profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% load crispy_forms_tags %} <!-- Updated here to load crispy forms -->
 {% block content %}
 <div class="content-section">
