--- a/Unit_life/life_project/messaging/templates/messaging/home.html
+++ b/Unit_life/life_project/messaging/templates/messaging/home.html
@@ -2,16 +2,16 @@
     {% extends "messaging/base.html" %}
 
     {% block content %}
-    {% for post in posts %}
+    {% for message in messages %}
         <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+          <img class="rounded-circle article-img" src="{{ message.sender.profile.image.url }}">
             <div class="media-body">
               <div class="article-metadata">
-                <a class="mr-2" href="#">{{ post.author }}</a>
-                <small class="text-muted">{{ post.date_posted|date:'dS, F, Y'}}</small>
+                <a class="mr-2" href="#">{{ message.sender }}</a>
+                <small class="text-muted">{{ message.timestamp|date:'dS, F, Y'}}</small>
               </div>
-              <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-              <p class="article-content">{{ post.content }}</p>
+              <h2><a class="article-title" href="{% url 'post-detail' message.id %}">{{ message.subject }}</a></h2>
+              <p class="article-content">{{ message.body }}</p>
             </div>
           </article>
     {% endfor %}
