--- a/Unit_life/life_project/landingpage/templates/landingpage/base.html
+++ b/Unit_life/life_project/landingpage/templates/landingpage/base.html
@@ -22,7 +22,7 @@
     <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Django Blog</a>
+            <a class="navbar-brand mr-4" href="{% url 'landingpage-home' %}">Life App</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,7 +37,7 @@
                     <a class="nav-item nav-link" href="{% url 'projectmanager-home' %}">Project Manager</a>
                     <a class="nav-item nav-link" href="{% url 'blog-home' %}">Blog</a>
                     <a class="nav-item nav-link" href="{% url 'messaging-home' %}">Messaging</a>
-                    <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+                    {% comment %} <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a> {% endcomment %}
                     <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                     <form action="{% url 'logout' %}" method="post" style="display: inline;">
                         {% csrf_token %}
