--- a/Unit_life/life_project/messaging/templates/messaging/inbox.html
+++ b/Unit_life/life_project/messaging/templates/messaging/inbox.html
@@ -1,13 +1,24 @@
 {% extends "messaging/base.html" %}
 
 {% block content %}
-<h2>Inbox</h2>
-<ul>
-    {% for message in messages %}
-        <li>
-            <a href="{% url 'message_detail' message.id %}">{{ message.subject }}</a>
-            - From: {{ message.sender.username }}
-        </li>
-    {% endfor %}
-</ul>
-{% endblock %}
+    <h2>Inbox</h2>
+    <div class="message-list">
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li>
+                        <div class="message-header">
+                            <strong>From: {{ message.sender }}</strong>
+                            <span class="message-date">{{ message.timestamp }}</span>
+                        </div>
+                        <div class="message-body">
+                            {{ message.body }}
+                        </div>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>Your inbox is empty.</p>
+        {% endif %}
+    </div>
+{% endblock content %}
