--- a/Unit_life/life_project/users/templates/users/base.html
+++ b/Unit_life/life_project/users/templates/users/base.html
@@ -10,31 +10,31 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'users/main.css' %}">
 
     {% if title %}
-        <title>Django Blog - {{ title }}</title>
+        <title>Django Users - {{ title }}</title>
     {% else %}
-        <title>Django Blog</title>
+        <title>Django Users</title>
     {% endif %}
 </head>
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'landingpage-home' %}">Life App</a>
+          <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Django Blog</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
+            {% comment %} <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
               <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
-            </div>
+            </div> {% endcomment %}
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-              <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+              {% comment %} <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a> {% endcomment %}
               <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
               {% comment %} <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a> {% endcomment %}
               <form action="{% url 'logout' %}" method="post" style="display: inline;">
