--- a/Unit_life/life_project/users/templates/users/logout.html
+++ b/Unit_life/life_project/users/templates/users/logout.html
@@ -1,5 +1,5 @@
 
-{% extends "blog/base.html" %}
+{% extends "landingpage/base.html" %}
 {% block content %}
     <h2>You have been logged out</h2>
     <div class="border-top pt-3">
