--- a/Unit_life/life_project/projectmanager/templates/projectmanager/project_detail.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/project_detail.html
@@ -8,5 +8,5 @@
   <p>End date: {{ project.end_date }}</p>
   <p>Status: {{ project.status }}</p>
   <p>Project manager: {{ project.managed_project }}</p>
-  <a href="{% url 'inbox' %}">Back to Inbox</a>
+  <a href="{% url 'projectmanager-home' %}">Back to home</a>
 {% endblock %}
