--- a/Unit_life/life_project/blog/static/blog/main.css
+++ b/Unit_life/life_project/blog/static/blog/main.css
@@ -82,3 +82,16 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+
+    @media (max-width: 768px) {
+  
+      /* Adjust styles for smaller screens */
+      body {
+        font-size: 14px;
+      }
+  
+      /* Example: Adjust the layout or styles of specific elements */
+      form {
+        margin-bottom: 10px;
+      }
+    }
