--- a/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
@@ -22,7 +22,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'landingpage-home' %}">Django Project Manager</a>
+          <a class="navbar-brand mr-4" href="{% url 'landingpage-home' %}">Life App</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -65,7 +65,7 @@
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.</p>
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
+                <li class="list-group-item list-group-item-light">Latest Projects</li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
                 <li class="list-group-item list-group-item-light">Calendars</li>
                 <li class="list-group-item list-group-item-light">etc</li>
