--- a/Unit_life/life_project/projectmanager/templates/projectmanager/home.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/home.html
@@ -3,13 +3,13 @@
     {% extends "projectmanager/base.html" %}
 
     {% block content %}    
-    {% for project in projects.items %}
+    {% for project in projects %}
     <div class="col">
       <div class="card h-100 shadow bg-light">
         <div class="card-body">
           <h5 class="card-title fw-bold">
             <i class="fa fa-project-diagram fa-2x text-primary"></i> <!-- Example icon -->
-            <a href="{% url 'project' project_id=project.project_id %}" class="stretched-link text-decoration-none text-dark">{{ project.name }}</a>
+            <a href="{% url 'project-detail' project.id %}" class="stretched-link text-decoration-none text-dark">{{ project.project_name }}</a>
           </h5>
           <p class="card-text">
             {{ project.description }}
@@ -19,7 +19,7 @@
         </p>
         </div>
         <div class="card-footer bg-white">
-          <small class="text-muted">Status: <span class="text-success">{{ project.status }}</span></small>
+          <small class="text-muted">Status: <span class="text-success">{{ project.get_status_display }}</span></small>
           <br>          
           <small class="text-muted">Managed by: <span class="text-success">{{ project.managed_project}}</span></small>
         </div>
@@ -33,8 +33,8 @@
 <div class="pagination">
     <span class="step-links">
         {% if projects.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ projects.previous_page_number }}">previous</a>
+            <a class="pagination-link" href="?page=1">&laquo; first</a>
+            <a class="pagination-link" href="?page={{ projects.previous_page_number }}">previous</a>
         {% endif %}
 
         <span class="current">
@@ -42,8 +42,8 @@
         </span>
 
         {% if projects.has_next %}
-            <a href="?page={{ projects.next_page_number }}">next</a>
-            <a href="?page={{ projects.paginator.num_pages }}">last &raquo;</a>
+            <a class="pagination-link" href="?page={{ projects.next_page_number }}">next</a>
+            <a class="pagination-link" href="?page={{ projects.paginator.num_pages }}">last &raquo;</a>
         {% endif %}
     </span>
 </div>
