--- a/Unit_life/life_project/projectmanager/templates/projectmanager/project_list.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/project_list.html
@@ -4,7 +4,7 @@
     <h1>Welcome to My Project Manager</h1>
     <nav>
       <!-- Link to the "Projects" page using the template tag -->
-      <a href="{% url 'projectmanager:project_list' %}">Projects</a>
+      <a href="{% url 'project-list' %}">Projects</a>
     </nav>
   </header>
   <h2>Project List</h2>
