--- a/Unit_life/life_project/blog/templates/blog/base.html
+++ b/Unit_life/life_project/blog/templates/blog/base.html
@@ -35,11 +35,11 @@
               {% if user.is_authenticated %}
               <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
               <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-              {% comment %} <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a> {% endcomment %}
-              <form action="{% url 'logout' %}" method="post" style="display: inline;">
+              <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+              {% comment %} <form action="{% url 'logout' %}" method="post" style="display: inline;">
                 {% csrf_token %}
                 <button type="submit" class="nav-item nav-link" style="background:none!important; border:none; padding:0!important; font-family:inherit; font-size:inherit; cursor:pointer;">Logout</button>
-              </form>
+              </form> {% endcomment %}
               {% else %}
               <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
               <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
