--- a/Unit_life/life_project/messaging/templates/messaging/base.html
+++ b/Unit_life/life_project/messaging/templates/messaging/base.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
           <a class="navbar-brand mr-4" href="{% url 'landingpage-home' %}">Life App</a> <!-- Update the URL pattern name as needed -->
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
@@ -51,13 +51,14 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
-          {% if messages %}
+          {% comment %} {% if messages %}
             {% for message in messages %}
-              <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
             {% endfor %}
-          {% endif %}
-          {% block content %}
-          {% endblock %}
+          {% endif %} {% endcomment %}
+          {% block content %}{% endblock %}
         </div>
         <div class="col-md-4">
           <div class="content-section">
