--- a/Unit_life/life_project/projectmanager/templates/projectmanager/home.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/home.html
@@ -28,6 +28,49 @@
     {% endfor %}
 
 
+<div class="mt-5">
+    <nav aria-label="Page navigation">
+        <ul class="pagination pagination-lg justify-content-center">
+            {% if projects.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page=1">&laquo; first</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ projects.previous_page_number }}">previous</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">&laquo; first</a>
+                </li>
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">previous</a>
+                </li>
+            {% endif %}
+
+            <li class="page-item active">
+                <span class="page-link">Page {{ projects.number }} of {{ projects.paginator.num_pages }}.</span>
+            </li>
+
+            {% if projects.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ projects.next_page_number }}">next</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ projects.paginator.num_pages }}">last &raquo;</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">next</a>
+                </li>
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">last &raquo;</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+</div>
+{% comment %} 
+
 
 
 <div class="pagination">
@@ -46,7 +89,7 @@
             <a class="pagination-link" href="?page={{ projects.paginator.num_pages }}">last &raquo;</a>
         {% endif %}
     </span>
-</div>
+</div> {% endcomment %}
     {% endblock content %}
 
 
