--- a/Unit_life/life_project/landingpage/templates/landingpage/base.html
+++ b/Unit_life/life_project/landingpage/templates/landingpage/base.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'landingpage/main.css' %}">
 
     {% if title %}
-        <title>Django Blog  - {{ title }}</title>
+        <title>Life App  - {{ title }}</title>
     {% else %}
-        <title>Django Blog</title>
+        <title>Life App</title>
     {% endif %}
 </head>
 <body>
