--- a/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
@@ -12,11 +12,13 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'projectmanager/main.css' %}">
 
-    {% if title %}
-        <title>Django Project Manager - {{ title }}</title>
+    {% comment %} {% if title %}
+        <title>Life Project Manager - {{ title }}</title>
     {% else %}
-        <title>Django Project Manager</title>
-    {% endif %}
+        <title>Life Project Manager</title>
+    {% endif %} {% endcomment %}
+    <title>{% block title %}Life Project Manager{% endblock %}</title>
+
 </head>
 <body>
     <header class="site-header">
@@ -64,8 +66,16 @@
           <div class="content-section">
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.</p>
+            {% comment %} {% include 'projectmanager/calendar.html' %} {% endcomment %}
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Projects</li>
+                  {% for project in latest_projects %}
+                    <li class="list-group-item">
+                      <a href="{% url 'project-detail' project.id %}">{{ project.project_name }}</a>
+                    </li>
+                  {% empty %}
+                    <li class="list-group-item">No recent projects.</li>
+                  {% endfor %}
                 <li class="list-group-item list-group-item-light">Announcements</li>
                 <li class="list-group-item list-group-item-light">Calendars</li>
                 <li class="list-group-item list-group-item-light">etc</li>
