--- a/Unit_life/life_project/projectmanager/templates/projectmanager/home.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/home.html
@@ -2,7 +2,15 @@
 
     {% extends "projectmanager/base.html" %}
 
-    {% block content %}    
+    {% block content %}  
+     <form method="get" action="{% url 'projectmanager-home' %}" class="mb-4">
+        <div class="input-group">
+            <input type="text" class="form-control" name="q" placeholder="Search for projects by name..." aria-label="Search" value="{{ request.GET.q }}">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="submit">Search</button>
+            </div>
+        </div>
+    </form>  
     {% for project in projects %}
     <div class="col">
       <div class="card h-100 shadow bg-light">
@@ -27,7 +35,7 @@
     </div>
     {% endfor %}
 
-
+{% comment %} 
 <div class="mt-5">
     <nav aria-label="Page navigation">
         <ul class="pagination pagination-lg justify-content-center">
@@ -68,7 +76,7 @@
             {% endif %}
         </ul>
     </nav>
-</div>
+</div> {% endcomment %}
 {% comment %} 
 
 
