--- a/Unit_life/life_project/projectmanager/templates/projectmanager/project_list.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/project_list.html
@@ -1,18 +1,84 @@
 {% extends "projectmanager/base.html" %}
 {% block content %}
-  <header>
+  {% comment %} <header>
     <h1>Welcome to My Project Manager</h1>
     <nav>
       <!-- Link to the "Projects" page using the template tag -->
       <a href="{% url 'project-list' %}">Projects</a>
     </nav>
-  </header>
+  </header> {% endcomment %}
   <h2>Project List</h2>
-  <ul>
+  {% comment %} <ul>
     {% for project in projects %}
       <li>{{ project.project_name }} - {{ project.description }}</li>
       {% empty %}
       <li>No projects available.</li>
     {% endfor %}
-  </ul>
+  </ul> {% endcomment %}
+  {% for project in projects %}
+    <div class="col">
+      <div class="card h-100 shadow bg-light">
+        <div class="card-body">
+          <h5 class="card-title fw-bold">
+            <i class="fa fa-project-diagram fa-2x text-primary"></i> <!-- Example icon -->
+            <a href="{% url 'project-detail' project.id %}" class="stretched-link text-decoration-none text-dark">{{ project.project_name }}</a>
+          </h5>
+          <p class="card-text">
+            {{ project.description }}
+            {% if project.managed_project %}
+
+            {% endif %}
+        </p>
+        </div>
+        <div class="card-footer bg-white">
+          <small class="text-muted">Status: <span class="text-success">{{ project.get_status_display }}</span></small>
+          <br>          
+          <small class="text-muted">Managed by: <span class="text-success">{{ project.managed_project}}</span></small>
+        </div>
+      </div>
+    </div>
+    
+    {% endfor %}
+
+<div class="mt-5">
+    <nav aria-label="Page navigation">
+        <ul class="pagination pagination-lg justify-content-center">
+            {% if projects.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page=1">&laquo; first</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ projects.previous_page_number }}">previous</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">&laquo; first</a>
+                </li>
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">previous</a>
+                </li>
+            {% endif %}
+
+            <li class="page-item active">
+                <span class="page-link">Page {{ projects.number }} of {{ projects.paginator.num_pages }}.</span>
+            </li>
+
+            {% if projects.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ projects.next_page_number }}">next</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ projects.paginator.num_pages }}">last &raquo;</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">next</a>
+                </li>
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">last &raquo;</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+</div>
 {% endblock %}
