--- a/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
@@ -67,17 +67,45 @@
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.</p>
             {% comment %} {% include 'projectmanager/calendar.html' %} {% endcomment %}
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Projects</li>
+              {% comment %} <ul class="list-group"> {% endcomment %}
+                {% comment %} <li class="list-group-item list-group-item-light">Latest Projects</li>
                   {% for project in latest_projects %}
                     <li class="list-group-item">
                       <a href="{% url 'project-detail' project.id %}">{{ project.project_name }}</a>
                     </li>
                   {% empty %}
                     <li class="list-group-item">No recent projects.</li>
-                  {% endfor %}
+                  {% endfor %} {% endcomment %}
+                <div class="accordion" id="latestProjectsAccordion">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingLatestProjects">
+                          
+                            {% comment %} <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLatestProjects" aria-expanded="false" aria-controls="collapseLatestProjects"> {% endcomment %}
+                              <button class="accordion-button collapsed list-group-item list-group-item-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLatestProjects" aria-expanded="false" aria-controls="collapseLatestProjects" style="font-size: 1rem;">
+                              {% comment %} <button class="accordion-button collapsed list-group-item list-group-item-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLatestProjects" aria-expanded="false" aria-controls="collapseLatestProjects"> {% endcomment %}
+                              Latest Projects
+                            </button>
+                        </h2>
+                        <div id="collapseLatestProjects" class="accordion-collapse collapse" aria-labelledby="headingLatestProjects" data-bs-parent="#latestProjectsAccordion">
+                            <div class="accordion-body">
+                                <ul class="list-group list-group-flush">
+                                    {% for project in latest_projects %}
+                                    <li class="list-group-item">
+                                        <a href="{% url 'project-detail' project.id %}">{{ project.project_name }}</a>
+                                    </li>
+                                    {% empty %}
+                                    <li class="list-group-item">No recent projects.</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+</div>
+
                 <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
+                <a class="nav-item nav-link" href="{% url 'calendar' %}">Calendar</a>
+
+
                 <li class="list-group-item list-group-item-light">etc</li>
               </ul>
           </div>
