--- a/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
@@ -65,7 +65,7 @@
         <div class="col-md-4">
           <div class="content-section">
             <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.</p>
+            <p class='text-muted'>Check out all the latest news here.</p>
             {% comment %} {% include 'projectmanager/calendar.html' %} {% endcomment %}
               {% comment %} <ul class="list-group"> {% endcomment %}
                 {% comment %} <li class="list-group-item list-group-item-light">Latest Projects</li>
