--- a/Unit_life/life_project/projectmanager/templates/projectmanager/project_detail.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/project_detail.html
@@ -1,12 +1,20 @@
 {% extends "projectmanager/base.html" %}
 
 {% block content %}
+  <div class="project-detail">
   <h2>Project Detail</h2>
-  <p>Project name: {{ project.name }}</p>
+  <p>Project name: {{ project.project_name }}</p>
   <p>Description: {{ project.description }}</p>
   <p>Start date: {{ project.start_date }}</p>
   <p>End date: {{ project.end_date }}</p>
-  <p>Status: {{ project.status }}</p>
+  <p>Status: {{ project.get_status_display }}</p>
   <p>Project manager: {{ project.managed_project }}</p>
-  <a href="{% url 'projectmanager-home' %}">Back to home</a>
+  <div class="project-actions">
+    <a href="{% url 'project-list' %}" class="btn btn-back">Back to Project List</a>
+    <a href="{% url 'task-create' id=project.id %}" class="btn btn-add">Add New Task</a>
+    <a href="{% url 'project-update' pk=project.pk %}" class="btn btn-edit">Edit Project</a>
+    <a href="{% url 'project-delete' pk=project.pk %}" class="btn btn-delete">Delete Project</a>
+  </div>
+  
+  </div>
 {% endblock %}
