--- a/Unit_life/life_project/messaging/templates/messaging/base.html
+++ b/Unit_life/life_project/messaging/templates/messaging/base.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'messaging/main.css' %}" /> <!-- Update 'messaging/main.css' with your messaging app's CSS file path -->
 
     {% if title %}
-      <title>Django Messaging - {{ title }}</title> <!-- Update the title as needed -->
+      <title>Life Messaging - {{ title }}</title> <!-- Update the title as needed -->
     {% else %}
-      <title>Django Messaging</title> <!-- Update the default title as needed -->
+      <title>Life Messaging</title> <!-- Update the default title as needed -->
     {% endif %}
   </head>
   <body>
