--- a/Unit_life/life_project/blog/templates/blog/base.html
+++ b/Unit_life/life_project/blog/templates/blog/base.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
 
     {% if title %}
-        <title>Django Blog - {{ title }}</title>
+        <title>Life Blog - {{ title }}</title>
     {% else %}
-        <title>Django Blog</title>
+        <title>Life Blog</title>
     {% endif %}
 </head>
 <body>
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
           <a class="navbar-brand mr-4" href="{% url 'landingpage-home' %}">Life App</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
