--- a/Unit_life/life_project/projectmanager/templates/projectmanager/project_detail.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/project_detail.html
@@ -1,10 +1,13 @@
-{% extends "projectmanager/base.html" %}
+{% comment %} {% extends "projectmanager/base.html" %}
 
 {% block content %}
   <div class="project-detail">
   <h2>Project Detail</h2>
+  
   <p>Project name: {{ project.project_name }}</p>
   <p>Description: {{ project.description }}</p>
+  <p>Managed by: {{ project.managed_project.username }}</p>
+
   <p>Start date: {{ project.start_date }}</p>
   <p>End date: {{ project.end_date }}</p>
   <p>Status: {{ project.get_status_display }}</p>
@@ -17,4 +20,43 @@
   </div>
   
   </div>
+{% endblock %} {% endcomment %}
+
+
+{% extends 'projectmanager/base.html' %}
+{% set title = project.name %}
+
+{% block content %}
+  <h1>{{ project.name }}</h1>
+  <p>Managed by: {{ project.managed_project.username }}</p>
+  <p>Created on: {{ project.created_at.strftime('%Y-%m-%d %H:%M') }}</p>
+  <p>{{ project.description }}</p>
+
+  <h2>Tasks</h2>
+  {% if project.tasks %}
+    <ul>
+      {% for task in project.tasks %}
+        <li class="task-item">
+          <strong>{{ task.name }}</strong> - {{ task.description }}
+          <br />Status: {{ task.status }}
+          <br />Assigned to: {{ task.managed_task.username }}
+          {% if allow_edit %}
+            <div class="task-actions">
+              <a href="{{ url_for('edit_task_action', project_id = project.project_id, task_id = task.task_id) }}" class="btn btn-edit">Edit Task</a>
+            </div>
+          {% endif %}
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p>No tasks found for this project.</p>
+  {% endif %}
+
+  {% if allow_edit %}
+    <div class="project-actions">
+      <a href="{{ url_for('edit_page', project_id = project.project_id) }}" class="btn btn-edit">Edit Project</a>
+      <a href="{{ url_for('create_task_page', project_id = project.project_id) }}" class="btn btn-add">Add New Task</a>
+    </div>
+  {% endif %}
 {% endblock %}
+
