--- a/Unit_life/life_project/projectmanager/templates/projectmanager/project_list.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/project_list.html
@@ -60,7 +60,7 @@
             {% endif %}
 
             <li class="page-item active">
-                <span class="page-link">Page {{ projects.number }} of {{ projects.paginator.num_pages }}.</span>
+                <span class="page-link">Page {{ projects.number }} of {{ projects.paginator.num_pages }}</span>
             </li>
 
             {% if projects.has_next %}
