--- a/Unit_life/life_project/landingpage/templates/landingpage/base.html
+++ b/Unit_life/life_project/landingpage/templates/landingpage/base.html
@@ -38,7 +38,8 @@
                     <a class="nav-item nav-link" href="{% url 'projectmanager-home' %}">Project Manager</a>
                     <a class="nav-item nav-link" href="{% url 'blog-home' %}">Blog</a>
                     <a class="nav-item nav-link" href="{% url 'messaging-home' %}">Messaging</a>
-                    <form action="{% url 'logout' %}" method="post" style="display: inline;">
+                    {% comment %} <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a> {% endcomment %}
+                    <form action="{% url 'logout' %}" method="POST" style="display: inline;">
                         {% csrf_token %}
                         <button type="submit" class="nav-item nav-link" style="background:none!important; border:none; padding:0!important; font-family:inherit; font-size:inherit; cursor:pointer;">Logout</button>
                     </form>
@@ -66,8 +67,8 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.</p>
+            <h3>Life Updates</h3>
+            <p class='text-muted'>Check out all the latest news here.</p>
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
