--- a/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/base.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h3>Our Sidebar</h3>
+            <h3>Life Updates</h3>
             <p class='text-muted'>Check out all the latest news here.</p>
             {% comment %} {% include 'projectmanager/calendar.html' %} {% endcomment %}
               {% comment %} <ul class="list-group"> {% endcomment %}
