--- a/Unit_life/life_project/projectmanager/templates/projectmanager/task_confirm_delete.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/task_confirm_delete.html
@@ -1,9 +1,13 @@
 {% extends "projectmanager/base.html" %}
+
 {% block content %}
-  <h2>Are you sure you want to delete "{{ object.task_name }}"?</h2>
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit">Yes, delete</button>
+  <h2>Confirm Delete</h2>
+  <p>Are you sure you want to delete the task "{{ object.task_name }}"?</p>
+  
+  <form method="POST">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger">Yes, delete this task</button>
   </form>
-  <a href="{% url 'task-list' %}">Cancel</a>
+  <a href="{% url 'project-detail' object.project.pk %}" class="btn btn-secondary">Cancel</a>
+
 {% endblock %}
