--- a/Unit_life/life_project/projectmanager/templates/projectmanager/calendar.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/calendar.html
@@ -19,7 +19,7 @@
 <h2>Events</h2>
 <ul>
     {% for event in events %}
-        <li>{{ event.title }} - {{ event.date }}</li>
+        <li>{{ event.title }} - {{ event.date|date:"F j, Y" }}</li>
     {% empty %}
         <li>No events yet</li>
     {% endfor %}
