--- a/Unit_life/life_project/projectmanager/templates/projectmanager/project_detail.html
+++ b/Unit_life/life_project/projectmanager/templates/projectmanager/project_detail.html
@@ -12,8 +12,13 @@
 
             <!-- Project Action Buttons -->
             <div class="d-flex justify-content-end mt-3">
-                <a href="{% url 'project-update' project.id %}" class="btn btn-primary">Edit Project</a>
-                <a href="{% url 'task-create' project.id %}" class="btn btn-primary">Add New Task</a>
+              {% if request.user == project.managed_project %}
+                    <a href="{% url 'project-update' project.id %}" class="btn btn-primary">Edit Project</a>
+                    <a href="{% url 'project-delete' project.id %}" class="btn btn-danger">Delete Project</a>
+                    <a href="{% url 'task-create' project.id %}" class="btn btn-primary">Add New Task</a>
+              {% endif %}
+                {% comment %} <a href="{% url 'project-delete' project.id %}" class="btn btn-danger">Delete Project</a> {% endcomment %}
+                {% comment %} <a href="{% url 'task-create' project.id %}" class="btn btn-primary">Add New Task</a> {% endcomment %}
             </div>
         </div>
     </div>
